[gd_scene load_steps=4 format=3 uid="uid://bphxugwrh145v"]

[ext_resource type="Shader" path="res://scripts/shaders/blur.gdshader" id="1_7uotj"]
[ext_resource type="Script" path="res://scripts/item_adder.gd" id="1_tuw2x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2grrn"]
shader = ExtResource("1_7uotj")
shader_parameter/blur_amount = 3.5

[node name="ItemAdder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tuw2x")

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2grrn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlePanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 48.0

[node name="HSeparator" type="HSeparator" parent="TitlePanel"]
layout_mode = 0
offset_top = 45.0
offset_right = 1152.0
offset_bottom = 49.0

[node name="TitleLabel" type="Label" parent="TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Add New Item
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentPanel" type="Panel" parent="."]
layout_mode = 0
offset_top = 49.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="AttributesContainer" type="VBoxContainer" parent="ContentPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_right = 1147.0
offset_bottom = 599.0

[node name="TypeEditContainer" type="HBoxContainer" parent="ContentPanel/AttributesContainer"]
layout_mode = 2
alignment = 1

[node name="AttributeName" type="Label" parent="ContentPanel/AttributesContainer/TypeEditContainer"]
layout_mode = 2
text = "Type: "

[node name="TypeDropdown" type="OptionButton" parent="ContentPanel/AttributesContainer/TypeEditContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 3
item_count = 7
popup/item_0/text = "Armor"
popup/item_1/text = "Food"
popup/item_1/id = 1
popup/item_2/text = "Junk"
popup/item_2/id = 2
popup/item_3/text = "Misc."
popup/item_3/id = 3
popup/item_4/text = "Potion"
popup/item_4/id = 4
popup/item_5/text = "Trinket"
popup/item_5/id = 5
popup/item_6/text = "Weapon"
popup/item_6/id = 6

[node name="AddButton" type="Button" parent="ContentPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_top = -50.0
offset_right = 39.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Add Item"

[node name="BackButton" type="Button" parent="ContentPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -50.0
offset_right = 55.0
offset_bottom = -10.0
grow_vertical = 0
text = "Back"
